--- a/spark-parent1902/pom.xml
+++ b/spark-parent1902/pom.xml
@@ -18,6 +18,7 @@
         <module>common</module>
         <module>core</module>
         <module>spark_sql</module>
+        <module>spark-streaming</module>
     </modules>
 
     <dependencyManagement>
@@ -55,6 +56,11 @@
             <dependency>
                 <groupId>org.apache.spark</groupId>
                 <artifactId>spark-hive_2.11</artifactId>
+                <version>${spark.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.spark</groupId>
+                <artifactId>spark-streaming_2.11</artifactId>
                 <version>${spark.version}</version>
             </dependency>
         </dependencies>
