--- a/spark-parent1902/pom.xml
+++ b/spark-parent1902/pom.xml
@@ -63,6 +63,11 @@
                 <artifactId>spark-streaming_2.11</artifactId>
                 <version>${spark.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.apache.spark</groupId>
+                <artifactId>spark-streaming-kafka-0-8_2.11</artifactId>
+                <version>${spark.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
