--- a/spark-parent1902/spark-streaming/pom.xml
+++ b/spark-parent1902/spark-streaming/pom.xml
@@ -16,6 +16,10 @@
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-streaming_2.11</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-streaming-kafka-0-8_2.11</artifactId>
+        </dependency>
 
     </dependencies>
 
