--- a/spark-parent1902/pom.xml
+++ b/spark-parent1902/pom.xml
@@ -19,6 +19,7 @@
         <module>core</module>
         <module>spark_sql</module>
         <module>spark-streaming</module>
+        <module>zookeeperOpration</module>
     </modules>
 
     <dependencyManagement>
